Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,6 @@
 stages:
-- stage: Build
-  pool:
-    vmImage: 'ubuntu-16.04'
+- stage: SetupStage
+  jobs:
+  - job: SetupJob
+    pool:
+      vmImage: 'ubuntu-16.04'
