--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   
 steps:
 - task: DotNetCoreInstaller@0
-  displayname: 'Use .NET Core SDK 2.1.505'
+  displayName: 'Use .NET Core SDK 2.1.505'
   inputs:
     version: 2.1.505
 
