--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: 'Ubuntu-16.04'
   demands:
     - npm
-    
+
 variables:
-  buiildConfiguration: 'Release'
+  buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '2.1.505'
 
