--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,5 @@
-trigger:
-- '*'
-
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: 'Ubuntu-16.04'
   demands:
     - npm
 
@@ -53,6 +50,9 @@ steps:
     publishWebProjects: false
     arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
+
+- task: WhiteSource Bolt@19
+  displayName: 'Run WhiteSource Bolt'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
